<resources>
    <string name="app_name">EatUp</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!--ry front end-->
    <string name="welcome_to_">Welcome To</string>
    <string name="greetings_e">Greetings! EatUp, as the name implies, encourages the community to finish their food and groceries as part of a collaborative effort to reduce food waste. \n\nWe aim to promote sustainable consumption by tracking consumers grocery expiration dates and by partnering with NGOs for food donations.</string>
    <string name="join_now_1">JOIN NOW</string>


    <string name="what_are_th">What are the\nUN SDGs?</string>

    <string name="the_un_sdg_">

The UN SDG (short for Sustainable Development Goals) is a global partnership of developed and developing countries to achieve the 2030 agenda for sustainable development. Our collective effort to achieve those 17 goals can ensure the peace and prosperity of the human race and the planet.</string>

    <string name="the_un_sdg_2">EatUp is essentially an integrated solution to two goals,which include:
       \nGoal 2: Zero Hunger and \nGoal 12: Responsible Consumption and Production.</string>

    <string name="goal_2_zero">Goal 2: Zero Hunger targets food shortage issues and the undermining of food security happening worldwide.The goal is to improve the nutritional value of agricultural products and promote sustainable agriculture.\n</string>
    <string name="goal_2_zero_2">EatUp aims to raise more awareness on this issue by working hand in hand with NGOs to provide food donations to the needy.</string>

    <string name="goal_12_res">

Goal 12: Responsible Consumption and Production patterns are the solution to the root causes of the triple planetary crisis: climate change, pollution, and biodiversity loss. According to the statistics from the United Nations, more than 10% of food is wasted on both the consumer and producer sides. \n\nEatUp intends to reduce food waste by tracking the expiration of groceries and preventing consumers from throwing food out.
</string>
    <string name="join_now_2">JOIN NOW</string>


    <string name="name_pick_u">
Name\nPick up time\nPick up location\nItems
</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="alerts_for_you">Alerts For You</string>
    <string name="who_are_we">Who Are We?</string>
    <string name="tham_rou_yi">Tham Rou Yi</string>
    <string name="thamrouyi_gmail_com">thamrouyi@gmail.com</string>
    <string name="_010_2041036">010-2041036</string>
    <string name="tan_xin_ming">Tan Xin Ming</string>
    <string name="_011_10827357">011-10827357</string>
    <string name="xinmingtan03_gmail_com">xinmingtan03@gmail.com</string>
    <string name="ivy_chung_ai_shin">Ivy Chung Ai Shin</string>
    <string name="ivyshin03_gmail_comm">ivyshin03@gmail.comm</string>
    <string name="_017_6934118">017-6934118</string>
    <string name="wong_jia_mien">Wong Jia Mien</string>
    <string name="_016_5261366">016-5261366</string>
    <string name="jiamienwong_gmail_com">jiamienwong@gmail.com</string>
    <string name="join_now">Join Now</string>
    <string name="home">Home</string>
    <string name="how_to_use">How To Use</string>
    <string name="contact_us">Contact Us</string>
    <string name="relationmap">relationmap</string>
    <string name="how_eat_up_works">How Eat Up Works?</string>
    <string name="we_are_welcoming_food_banks_and_ngo_s_to_provide_volunteer_groups_to_assist_us_in_food_collections_and_distribution_of_surplus_food_to_the_needy_register_now_to_be_our_mission_partner">We are welcoming Food Banks And NGO’s to provide volunteer groups to assist us in food collections and distribution of surplus food to the needy. \n\nRegister now to be our mission partner!</string>
    <string name="submit">SUBMIT</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="website">Website</string>
    <string name="your_message">Your Message</string>
    <string name="organization_name">Organization Name</string>
    <string name="eatup">EatUp</string>

    <string name="thank_you_f">
\nThank you for your interest in supporting EatUp. \nOur team will contact you shortly to discuss your enquiry further.\n
</string>


</resources>