<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactusActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ContactUsPage">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#8ADECA"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

            <ImageView
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_marginStart="-15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/main_logo" />

            <TextView
                android:id="@+id/homebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="50dp"
                android:text="@string/home"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/howtousebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="110dp"
                android:layout_marginTop="50dp"
                android:text="@string/how_to_use"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contactusbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="50dp"
                android:text="@string/contact_us"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/joinnowwhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="287dp"
                android:layout_marginTop="34dp"
                android:scaleType="center"
                android:text="@string/join_now"
                android:textColor="#000000"
                android:textSize="15sp"
                app:backgroundTint="@color/white"
                app:cornerRadius="30dp" />


        <TextView
            android:id="@+id/who_are_we_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="132dp"
            android:text="@string/who_are_we"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profileicon"
            android:layout_width="85dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="200dp"
            app:srcCompat="@drawable/profile_icon_2" />


        <ImageView
            android:id="@+id/profileicon2"
            android:layout_width="85dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="320dp"
            app:srcCompat="@drawable/profile_icon_2" />

        <ImageView
            android:id="@+id/profileicon3"
            android:layout_width="85dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="440dp"
            app:srcCompat="@drawable/profile_icon_2" />

        <ImageView
            android:id="@+id/profileicon4"
            android:layout_width="85dp"
            android:layout_height="84dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="560dp"
            app:srcCompat="@drawable/profile_icon_2" />

        <TextView
            android:id="@+id/thamrouyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="204dp"
            android:text="@string/tham_rou_yi"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rygmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="227dp"
            android:text="@string/thamrouyi_gmail_com"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="251dp"
            android:text="@string/_010_2041036"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/xinming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="329dp"
            android:text="@string/tan_xin_ming"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/xmphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="376dp"
            android:text="@string/_011_10827357"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/xmgmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="352dp"
            android:text="@string/xinmingtan03_gmail_com"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="450dp"
            android:layout_centerVertical="true"
            android:text="@string/ivy_chung_ai_shin"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="473dp"
            android:text="@string/ivyshin03_gmail_comm"
            android:layout_centerVertical="true"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ivyphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="497dp"
            android:layout_centerVertical="true"
            android:text="@string/_017_6934118"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="564dp"
            android:text="@string/wong_jia_mien"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="587dp"
            android:text="@string/jiamienwong_gmail_com"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="611dp"
            android:text="@string/_016_5261366"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RelativeLayout>


</RelativeLayout>