<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeourpartnerActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#8ADECA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/main_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:text="@string/home"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/howtousebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:text="@string/how_to_use"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactusbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="200dp"
        android:text="@string/contact_us"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/joinnowwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:text='@string/join_now'
        android:textColor="#000000"
        android:layout_marginStart="287dp"
        android:layout_marginTop="34dp"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="342dp"
        android:layout_height="152dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/we_are_welcoming_food_banks_and_ngo_s_to_provide_volunteer_groups_to_assist_us_in_food_collections_and_distribution_of_surplus_food_to_the_needy_register_now_to_be_our_mission_partner"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/organization_name"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/textborder"
        android:hint="@string/organization_name"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:autofillHints="" />

    <EditText
        android:id="@+id/partner_email"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/textborder"
        android:hint="@string/email"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/organization_name" />

    <EditText
        android:id="@+id/partner_phone_no"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/textborder"
        android:hint="@string/phone_number"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partner_email" />

    <EditText
        android:id="@+id/partner_website"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/textborder"
        android:hint="@string/website"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partner_phone_no" />

    <EditText
        android:id="@+id/partner_message"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/textborder"
        android:hint="@string/your_message"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partner_website" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="164dp"
        android:backgroundTint="#8ADECA"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partner_message" />


</androidx.constraintlayout.widget.ConstraintLayout>