<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowtouseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#8ADECA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_marginStart="-15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/main_logo" />

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/home"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/howtouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:text="@string/how_to_use"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="200dp"
            android:layout_marginTop="50dp"
            android:text="@string/contact_us"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/joinnowwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="287dp"
            android:layout_marginTop="34dp"
            android:scaleType="center"
            android:text='@string/join_now'
            android:textColor="#000000"
            android:textSize="15sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="30dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="208dp"
        android:contentDescription="@string/relationmap"
        android:scaleType="center"
        app:srcCompat="@drawable/relation_map" />

    <TextView
        android:id="@+id/howeatupworks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="135dp"
        android:text="@string/how_eat_up_works"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/joinnowgreen"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="800dp"
        android:scaleType="center"
        android:text='@string/join_now'
        android:textColor="#000000"
        app:backgroundTint="#8ADECA"
        app:cornerRadius="30dp" />






</RelativeLayout>