<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Homepage1Activity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:width="390dp"
        android:height="844dp"
        android:viewportWidth="390"
        android:viewportHeight="844"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="#8ADECA">


            <TextView
                android:layout_width="226dp"
                android:layout_height="131dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="162dp"
                android:gravity="top"
                android:lineSpacingExtra="14dp"
                android:text="@string/welcome_to_"
                android:textAppearance="@style/welcome_to_" />

            <ImageView
                android:layout_width="146dp"
                android:layout_height="144dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="150dp"
                android:src="@drawable/main_logo" />

        </FrameLayout>

        <TextView
            android:layout_width="252dp"
            android:layout_height="364dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="333dp"
            android:text="@string/greetings_e"
            android:textAppearance="@style/greetings_e"
            android:textSize="20sp" />

        <Button
            android:id="@+id/joinowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="735dp"
            android:backgroundTint="#8ADECA"
            android:text="@string/join_now_1"
            android:textColor="#000000" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

